--- a/.github/workflows/branch-push.yml
+++ b/.github/workflows/branch-push.yml
@@ -7,48 +7,48 @@ on:
 
 jobs:
   create-file:
-    name: Create VARIABLES.md file on change within Branch
+    name: Create PROPERTIES.md file on change within Branch
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
           fetch-depth: 0
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
 
-    - name: Install additional libraries
-      run: pip install -r src/requirements_ci.txt
+      - name: Install additional libraries
+        run: pip install -r src/requirements_ci.txt
 
-    - name: Run Python script
-      run: python3 src/readme_generator.py
-      working-directory: ${{ github.workspace }}
+      - name: Run Python script
+        run: python3 src/readme_generator.py
+        working-directory: ${{ github.workspace }}
 
-    - name: Check for changes
-      id: check_changes
-      run: |
-        if git status --porcelain | grep "VARIABLES.md"; then
-          echo "CHANGES_FOUND=true" >> $GITHUB_OUTPUT
-        else
-          echo "CHANGES_FOUND=false" >> $GITHUB_OUTPUT
-        fi
-      continue-on-error: true
-      working-directory: ${{ github.workspace }}
+      - name: Check for changes
+        id: check_changes
+        run: |
+          if git status --porcelain | grep "PROPERTIES.md"; then
+            echo "CHANGES_FOUND=true" >> $GITHUB_OUTPUT
+          else
+            echo "CHANGES_FOUND=false" >> $GITHUB_OUTPUT
+          fi
+        continue-on-error: true
+        working-directory: ${{ github.workspace }}
 
-    - name: Commit and push changes
-      if: steps.check_changes.outputs.CHANGES_FOUND == 'true'
-      run: |
-        git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git config --local user.name "GitHub Action"
-        git add */VARIABLES.md
-        git commit -s -m "Add VARIABLES.md files"
-        git push
-      working-directory: ${{ github.workspace }}
-      env:
+      - name: Commit and push changes
+        if: steps.check_changes.outputs.CHANGES_FOUND == 'true'
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "GitHub Action"
+          git add */PROPERTIES.md
+          git commit -s -m "Add PROPERTIES.md files"
+          git push
+        working-directory: ${{ github.workspace }}
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   parse-turtle:
