--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,9 +1,9 @@
 name: CI pipeline
 
 on:
-    push:
-      branches-ignore:
-        - main
+  push:
+    branches-ignore:
+      - main
 
 jobs:
   linter:
@@ -12,22 +12,21 @@ jobs:
       fail-fast: false
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.12"
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
 
+      - name: Install linter and formatter dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements_ci.txt
 
-    - name: Install linter and formatter dependencies
-      run: |
-         python -m pip install --upgrade pip
-         python -m pip install -r src/requirements_ci.txt
+      - name: Lint with flake8
+        run: flake8 src/
 
-    - name: Lint with flake8 
-      run: flake8 src/
-
-    - name: Check black format 
-      run:  black --check --diff src/
+      - name: Check black format
+        run: black --check --diff src/
