--- a/requirements_ci.txt
+++ b/requirements_ci.txt
@@ -2,5 +2,7 @@ rdflib==7.1.3
 rdflib-jsonld==0.6.2
 pyshacl==0.30.0
 black==25.1.0
-flake8>=7.1.2
-
+flake8==7.1.2
+isort==6.0.1
+autopep8==2.3.2
+pre-commit==4.1.0
