--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -24,9 +24,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r requirements_ci.txt
+          pre-commit install
 
-      - name: Lint with flake8
-        run: flake8 src/
-
-      - name: Check black format
-        run: black --check --diff src/
+      - name: Run pre-commit checks
+        run: pre-commit run --all-files
+        
