--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@ repos:
         language: system
         types: [python]
         args: ["--config=pyproject.toml"]
+        pass_filenames: true  # Ensures black runs only on changed files
 
       - id: isort
         name: isort
@@ -14,6 +15,7 @@ repos:
         language: system
         types: [python]
         args: ["--settings=pyproject.toml"]
+        pass_filenames: true  # Ensures isort runs only on changed files
 
       - id: flake8
         name: flake8
@@ -21,3 +23,10 @@ repos:
         language: system
         types: [python]
         args: ["--config=.flake8"]
+        pass_filenames: true  # Ensures flake8 runs only on changed files
+
+#      - id: check-signoff
+#        name: Ensure Signed-off-by
+#        entry: bash -c 'grep -iq "^Signed-off-by: " "$1"' _
+#        language: system
+#        types: [commit-msg]
