--- a/manifest/manifest_instance.json
+++ b/manifest/manifest_instance.json
@@ -9,7 +9,6 @@
   },
   "@id": "did:web:registry.gaia-x.eu:Manifest:oZVLOL-U0-HEQukff3Oj5V6xmuozZMykqVH2",
   "@type": "manifest:Manifest",
-
   "manifest:hasManifestReference": {
     "@type": "manifest:Link",
     "manifest:accessRole": "publicUser",
@@ -26,7 +25,6 @@
       }
     }
   },
-
   "manifest:hasLicense": {
     "@type": "manifest:License",
     "gx:license": {
@@ -49,8 +47,7 @@
       }
     }
   },
-
-  "manifest:hasContent": [
+  "manifest:hasArtifacts": [
     {
       "@type": "manifest:Link",
       "manifest:accessRole": "owner",
@@ -204,6 +201,5 @@
       }
     }
   ],
-
-  "manifest:hasExternalContent": []
+  "manifest:hasExternalArtifacts": []
 }
