fixing roles and categories
Signed-off-by: jdsika <carlo.van-driesten@vdl.digital>

--- a/manifest/manifest_instance.json
+++ b/manifest/manifest_instance.json
@@ -233,11 +233,11 @@
           "manifest:unit": "pixels",
           "manifest:width": {
             "@value": "1095.0",
-            "@type": "xsd:decimal"
+            "@type": "xsd:float"
           },
           "manifest:height": {
             "@value": "850.0",
-            "@type": "xsd:decimal"
+            "@type": "xsd:float"
           }
         }
       }
