--- a/envited-x/manifest_reference.json
+++ b/envited-x/manifest_reference.json
@@ -234,11 +234,11 @@
           "manifest:unit": "pixels",
           "manifest:width": {
             "@value": "1095",
-            "@type": "xsd:decimal"
+            "@type": "xsd:float"
           },
           "manifest:height": {
             "@value": "850",
-            "@type": "xsd:decimal"
+            "@type": "xsd:float"
           }
         }
       }
