Comprehensive Ontology Rework: Introduction of ENVITED-X Superclass and Enhanced Structure for Simulation Asset Interoperability
Changelog for PR #141: Ontology Management Base Updates
* fixes #71 resolves #84 resolves #56 resolves #55 

## Extended Analysis of the ENVITED-X Ontology Structure with Detailed Insights on Improved Simulation Assets

### 1. Unified Ontology Structure and ENVITED-X Superclass
The new ontology introduces the generalized `envited-x` superclass ontology, effectively standardizing how simulation assets are represented within the ENVITED-X Data Space ecosystem. The `envited-x:SimulationAsset` class acts as a foundational superclass, facilitating semantic consistency and interoperability for specialized simulation assets, including scenarios, HD maps, environment models, OSI traces, and surface models.

#### Key Features of envited-x Superclass:
- **SimulationAsset**: A structured digital asset aggregating essential metadata (`DataResource`) and structured manifests. It mandates linking exactly one `DataResource` and one `Manifest`.
- **DataResource**: Extends Gaia-X resource definitions, providing standard metadata (name, description).
- **DataResourceExtension**: Supplies additional metadata for enriched descriptions, enhancing the semantic depth without creating independent data assets.
- **Manifest**: Subclass of `manifest:Manifest`, describing internal structures, licensing, and linked resources.

### 2. General Improvements Across Simulation Asset Ontologies

The comprehensive overhaul of asset-specific ontologies such as scenario, HD map, environment model, OSI trace, and surface model introduces robust structured metadata extensions aligned with the ENVITED-X superclass ontology, standardizing critical elements:

- **Unified DataResourceExtension**: Clearly structured metadata across various simulation asset types with common properties for `format`, `content`, `quality`, `quantity`, `data source`, and `georeference`.

#### Detailed An

--- a/.github/workflows/branch-push.yml
+++ b/.github/workflows/branch-push.yml
@@ -7,48 +7,48 @@ on:
 
 jobs:
   create-file:
-    name: Create VARIABLES.md file on change within Branch
+    name: Create PROPERTIES.md file on change within Branch
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
           fetch-depth: 0
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
 
-    - name: Install additional libraries
-      run: pip install -r src/requirements_ci.txt
+      - name: Install additional libraries
+        run: pip install -r requirements_ci.txt
 
-    - name: Run Python script
-      run: python3 src/readme_generator.py
-      working-directory: ${{ github.workspace }}
+      - name: Run Python script
+        run: python3 src/readme_generator.py
+        working-directory: ${{ github.workspace }}
 
-    - name: Check for changes
-      id: check_changes
-      run: |
-        if git status --porcelain | grep "VARIABLES.md"; then
-          echo "CHANGES_FOUND=true" >> $GITHUB_OUTPUT
-        else
-          echo "CHANGES_FOUND=false" >> $GITHUB_OUTPUT
-        fi
-      continue-on-error: true
-      working-directory: ${{ github.workspace }}
+      - name: Check for changes
+        id: check_changes
+        run: |
+          if git status --porcelain | grep "PROPERTIES.md"; then
+            echo "CHANGES_FOUND=true" >> $GITHUB_OUTPUT
+          else
+            echo "CHANGES_FOUND=false" >> $GITHUB_OUTPUT
+          fi
+        continue-on-error: true
+        working-directory: ${{ github.workspace }}
 
-    - name: Commit and push changes
-      if: steps.check_changes.outputs.CHANGES_FOUND == 'true'
-      run: |
-        git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git config --local user.name "GitHub Action"
-        git add */VARIABLES.md
-        git commit -s -m "Add VARIABLES.md files"
-        git push
-      working-directory: ${{ github.workspace }}
-      env:
+      - name: Commit and push changes
+        if: steps.check_changes.outputs.CHANGES_FOUND == 'true'
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "GitHub Action"
+          git add */PROPERTIES.md
+          git commit -s -m "Add PROPERTIES.md files"
+          git push
+        working-directory: ${{ github.workspace }}
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   parse-turtle:
@@ -80,7 +80,7 @@ jobs:
 
       - name: Install additional libraries
         if: env.TTL_HAS_CHANGED == 'true'
-        run: pip install -r src/requirements_ci.txt
+        run: pip install -r requirements_ci.txt
 
       - name: Run Python script for each changed .ttl file
         if: env.TTL_HAS_CHANGED == 'true'
@@ -121,7 +121,7 @@ jobs:
 
       - name: Install additional libraries
         if: env.FILES_HAVE_CHANGED == 'true'
-        run: pip install -r src/requirements_ci.txt
+        run: pip install -r requirements_ci.txt
 
       - name: Run Python script for each directory that is affected (either shacl or instance file was changed).
         if: env.FILES_HAVE_CHANGED == 'true'
@@ -162,11 +162,11 @@ jobs:
 
       - name: Install additional libraries for ci
         if: env.FILES_HAVE_CHANGED == 'true'
-        run: pip install -r src/requirements_ci.txt
+        run: pip install -r requirements_ci.txt
 
       - name: Install additional libraries for federated catalogue script that is being called.
         if: env.FILES_HAVE_CHANGED == 'true'
-        run: pip install -r src/requirements_fc.txt
+        run: pip install -r requirements_fc.txt
 
       - name: Run Python script for each directory that is affected (ttl file was changed).
         if: env.FILES_HAVE_CHANGED == 'true'
