--- a/.github/workflows/branch-push.yml
+++ b/.github/workflows/branch-push.yml
@@ -22,7 +22,7 @@ jobs:
           python-version: "3.12"
 
       - name: Install additional libraries
-        run: pip install -r requirements_ci.txt
+        run: pip install -r requirements.txt
 
       - name: Run Python script
         run: python3 src/readme_generator.py
@@ -80,7 +80,7 @@ jobs:
 
       - name: Install additional libraries
         if: env.TTL_HAS_CHANGED == 'true'
-        run: pip install -r requirements_ci.txt
+        run: pip install -r requirements.txt
 
       - name: Run Python script for each changed .ttl file
         if: env.TTL_HAS_CHANGED == 'true'
@@ -121,7 +121,7 @@ jobs:
 
       - name: Install additional libraries
         if: env.FILES_HAVE_CHANGED == 'true'
-        run: pip install -r requirements_ci.txt
+        run: pip install -r requirements.txt
 
       - name: Run Python script for each directory that is affected (either shacl or instance file was changed).
         if: env.FILES_HAVE_CHANGED == 'true'
@@ -162,11 +162,11 @@ jobs:
 
       - name: Install additional libraries for ci
         if: env.FILES_HAVE_CHANGED == 'true'
-        run: pip install -r requirements_ci.txt
+        run: pip install -r requirements.txt
 
       - name: Install additional libraries for federated catalogue script that is being called.
         if: env.FILES_HAVE_CHANGED == 'true'
-        run: pip install -r requirements_fc.txt
+        run: pip install -r requirements.txt
 
       - name: Run Python script for each directory that is affected (ttl file was changed).
         if: env.FILES_HAVE_CHANGED == 'true'
