--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -23,9 +23,8 @@ jobs:
       - name: Install linter and formatter dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -r requirements_ci.txt
+          python -m pip install -r requirements.txt
           pre-commit install
 
       - name: Run pre-commit checks
         run: pre-commit run --all-files
-        
