--- a/.github/workflows/manual_upload_to_fc.yml
+++ b/.github/workflows/manual_upload_to_fc.yml
@@ -32,7 +32,7 @@ jobs:
           python-version: 3.12.0
 
       - name: Install required python libraries
-        run: pip install -r requirements_fc.txt
+        run: pip install -r requirements.txt
 
       - name: Run Python upload into FC
         run: python3 src/fc_upload_with_update.py
