--- a/scenario/manifest_reference.json
+++ b/scenario/manifest_reference.json
@@ -1,8 +1,8 @@
 {
   "@context": {
-    "scenario": "https://github.com/GAIA-X4PLC-AAD/ontology-management-base/tree/main/scenario/",
-    "envited-x": "https://github.com/GAIA-X4PLC-AAD/ontology-management-base/tree/main/envited-x/",
-    "manifest": "https://github.com/GAIA-X4PLC-AAD/ontology-management-base/tree/main/manifest/",
+    "scenario": "https://ontologies.envited-x.net/scenario/v4/ontology",
+    "envited-x": "https://ontologies.envited-x.net/envited-x/v2/ontology",
+    "manifest": "https://ontologies.envited-x.net/manifest/v4/ontology",
     "gx": "https://registry.lab.gaia-x.eu/development/api/trusted-shape-registry/v1/shapes/jsonld/trustframework#",
     "sh": "http://www.w3.org/ns/shacl#",
     "rdf": "http://www.w3.org/1999/02/22-rdf-syntax-ns#",
@@ -13,59 +13,125 @@
   "@type": "scenario:Manifest",
   "manifest:hasManifestReference": {
     "@type": "manifest:Link",
-    "manifest:hasAccessRole": { "@type": "manifest:AccessRole", "@id": "envited-x:isPublic" },
-    "manifest:hasCategory": { "@type": "manifest:Category", "@id": "envited-x:isManifest" },
+    "manifest:hasAccessRole": {
+      "@type": "manifest:AccessRole",
+      "@id": "envited-x:isPublic"
+    },
+    "manifest:hasCategory": {
+      "@type": "manifest:Category",
+      "@id": "envited-x:isManifest"
+    },
     "manifest:hasFileMetadata": {
       "@type": "manifest:FileMetadata",
-      "manifest:filePath": { "@value": "./manifest_instance.json", "@type": "xsd:anyURI" },
-      "manifest:mimeType": { "@value": "application/ld+json", "@type": "xsd:string" }
+      "manifest:filePath": {
+        "@value": "./manifest_instance.json",
+        "@type": "xsd:anyURI"
+      },
+      "manifest:mimeType": {
+        "@value": "application/ld+json",
+        "@type": "xsd:string"
+      }
     }
   },
   "manifest:hasLicense": {
     "@type": "manifest:License",
-    "gx:license": { "@value": "EPL-2.0" },
+    "gx:license": {
+      "@value": "EPL-2.0"
+    },
     "manifest:licenseData": {
       "@type": "manifest:Link",
-      "manifest:hasAccessRole": { "@type": "manifest:AccessRole", "@id": "envited-x:isPublic" },
-      "manifest:hasCategory": { "@type": "manifest:Category", "@id": "envited-x:isLicense" },
+      "manifest:hasAccessRole": {
+        "@type": "manifest:AccessRole",
+        "@id": "envited-x:isPublic"
+      },
+      "manifest:hasCategory": {
+        "@type": "manifest:Category",
+        "@id": "envited-x:isLicense"
+      },
       "manifest:hasFileMetadata": {
         "@type": "manifest:FileMetadata",
-        "manifest:filePath": { "@value": "https://opensource.org/license/EPL-2.0", "@type": "xsd:anyURI" },
-        "manifest:mimeType": { "@value": "text/html", "@type": "xsd:string" }
+        "manifest:filePath": {
+          "@value": "https://opensource.org/license/EPL-2.0",
+          "@type": "xsd:anyURI"
+        },
+        "manifest:mimeType": {
+          "@value": "text/html",
+          "@type": "xsd:string"
+        }
       }
     }
   },
   "manifest:hasReferencedArtifacts": [
     {
       "@type": "manifest:Link",
-      "manifest:iri": { "@id": "did:web:registry.gaia-x.eu:HdMap:wDgNY3gZAxMe3LjhdAZ9TbPiYnQ-yybNhCu8" },
-      "skos:note": { "@value": "Referenced HDMap artifact." },
+      "manifest:iri": {
+        "@id": "did:web:registry.gaia-x.eu:HdMap:wDgNY3gZAxMe3LjhdAZ9TbPiYnQ-yybNhCu8"
+      },
+      "skos:note": {
+        "@value": "Referenced HDMap artifact."
+      },
       "sh:conformsTo": [
-        { "@id": "https://github.com/GAIA-X4PLC-AAD/ontology-management-base/tree/main/hdmap/" },
-        { "@id": "https://github.com/GAIA-X4PLC-AAD/ontology-management-base/tree/main/manifest/" }
+        {
+          "@id": "https://ontologies.envited-x.net/hdmap/v4/ontology"
+        },
+        {
+          "@id": "https://ontologies.envited-x.net/manifest/v4/ontology"
+        }
       ],
-      "manifest:hasAccessRole": { "@type": "manifest:AccessRole", "@id": "envited-x:isOwner" },
-      "manifest:hasCategory": { "@type": "manifest:Category", "@id": "envited-x:isReferencedSimulationData" },
+      "manifest:hasAccessRole": {
+        "@type": "manifest:AccessRole",
+        "@id": "envited-x:isOwner"
+      },
+      "manifest:hasCategory": {
+        "@type": "manifest:Category",
+        "@id": "envited-x:isReferencedSimulationData"
+      },
       "manifest:hasFileMetadata": {
         "@type": "manifest:FileMetadata",
-        "manifest:filePath": { "@value": "did:web:registry.gaia-x.eu:HdMap:wDgNY3gZAxMe3LjhdAZ9TbPiYnQ-yybNhCu8", "@type": "xsd:anyURI" },
-        "manifest:mimeType": { "@value": "application/ld+json", "@type": "xsd:string" }
+        "manifest:filePath": {
+          "@value": "did:web:registry.gaia-x.eu:HdMap:wDgNY3gZAxMe3LjhdAZ9TbPiYnQ-yybNhCu8",
+          "@type": "xsd:anyURI"
+        },
+        "manifest:mimeType": {
+          "@value": "application/ld+json",
+          "@type": "xsd:string"
+        }
       }
     },
     {
       "@type": "manifest:Link",
-      "manifest:iri": { "@id": "did:web:registry.gaia-x.eu:EnvironmentModel:6w462bGIheP4YgwebemsXr3yjIqvhi90EDIi" },
-      "skos:note": { "@value": "Reference to Environment Model artifact." },
+      "manifest:iri": {
+        "@id": "did:web:registry.gaia-x.eu:EnvironmentModel:6w462bGIheP4YgwebemsXr3yjIqvhi90EDIi"
+      },
+      "skos:note": {
+        "@value": "Reference to Environment Model artifact."
+      },
       "sh:conformsTo": [
-        { "@id": "https://github.com/GAIA-X4PLC-AAD/ontology-management-base/tree/main/environment-model/" },
-        { "@id": "https://github.com/GAIA-X4PLC-AAD/ontology-management-base/tree/main/manifest/" }
+        {
+          "@id": "https://ontologies.envited-x.net/environment-model/v4/ontology"
+        },
+        {
+          "@id": "https://ontologies.envited-x.net/manifest/v4/ontology"
+        }
       ],
-      "manifest:hasAccessRole": { "@type": "manifest:AccessRole", "@id": "envited-x:isOwner" },
-      "manifest:hasCategory": { "@type": "manifest:Category", "@id": "envited-x:isReferencedSimulationData" },
+      "manifest:hasAccessRole": {
+        "@type": "manifest:AccessRole",
+        "@id": "envited-x:isOwner"
+      },
+      "manifest:hasCategory": {
+        "@type": "manifest:Category",
+        "@id": "envited-x:isReferencedSimulationData"
+      },
       "manifest:hasFileMetadata": {
         "@type": "manifest:FileMetadata",
-        "manifest:filePath": { "@value": "did:web:registry.gaia-x.eu:EnvironmentModel:6w462bGIheP4YgwebemsXr3yjIqvhi90EDIi", "@type": "xsd:anyURI" },
-        "manifest:mimeType": { "@value": "application/ld+json", "@type": "xsd:string" }
+        "manifest:filePath": {
+          "@value": "did:web:registry.gaia-x.eu:EnvironmentModel:6w462bGIheP4YgwebemsXr3yjIqvhi90EDIi",
+          "@type": "xsd:anyURI"
+        },
+        "manifest:mimeType": {
+          "@value": "application/ld+json",
+          "@type": "xsd:string"
+        }
       }
     }
   ],
