--- a/surface-model/manifest_reference.json
+++ b/surface-model/manifest_reference.json
@@ -1,7 +1,7 @@
 {
   "@context": {
-    "envited-x": "https://github.com/GAIA-X4PLC-AAD/ontology-management-base/tree/main/envited-x/",
-    "manifest": "https://github.com/GAIA-X4PLC-AAD/ontology-management-base/tree/main/manifest/",
+    "envited-x": "https://ontologies.envited-x.net/envited-x/v2/ontology",
+    "manifest": "https://ontologies.envited-x.net/manifest/v4/ontology",
     "gx": "https://registry.lab.gaia-x.eu/development/api/trusted-shape-registry/v1/shapes/jsonld/trustframework#",
     "sh": "http://www.w3.org/ns/shacl#",
     "rdf": "http://www.w3.org/1999/02/22-rdf-syntax-ns#",
