--- a/scenario/manifest_reference.json
+++ b/scenario/manifest_reference.json
@@ -1,8 +1,8 @@
 {
   "@context": {
-    "scenario": "https://ontologies.envited-x.net/scenario/v4/ontology",
-    "envited-x": "https://ontologies.envited-x.net/envited-x/v2/ontology",
-    "manifest": "https://ontologies.envited-x.net/manifest/v4/ontology",
+    "scenario": "https://ontologies.envited-x.net/scenario/v4/ontology#",
+    "envited-x": "https://ontologies.envited-x.net/envited-x/v2/ontology#",
+    "manifest": "https://ontologies.envited-x.net/manifest/v5/ontology#",
     "gx": "https://registry.lab.gaia-x.eu/development/api/trusted-shape-registry/v1/shapes/jsonld/trustframework#",
     "sh": "http://www.w3.org/ns/shacl#",
     "rdf": "http://www.w3.org/1999/02/22-rdf-syntax-ns#",
