--- a/ositrace/manifest_reference.json
+++ b/ositrace/manifest_reference.json
@@ -85,7 +85,7 @@
           "@type": "xsd:string"
         },
         "manifest:fileSize": {
-          "@value": 636673,
+          "@value": "636673",
           "@type": "xsd:integer"
         },
         "manifest:filename": {
@@ -119,7 +119,7 @@
           "@type": "xsd:string"
         },
         "manifest:fileSize": {
-          "@value": 5120,
+          "@value": "5120",
           "@type": "xsd:integer"
         },
         "manifest:filename": {
@@ -153,7 +153,7 @@
           "@type": "xsd:string"
         },
         "manifest:fileSize": {
-          "@value": 5678,
+          "@value": "5678",
           "@type": "xsd:integer"
         },
         "manifest:filename": {
@@ -187,7 +187,7 @@
           "@type": "xsd:string"
         },
         "manifest:fileSize": {
-          "@value": 1500,
+          "@value": "1500",
           "@type": "xsd:integer"
         },
         "manifest:filename": {
