--- a/scenario/manifest_reference.json
+++ b/scenario/manifest_reference.json
@@ -119,6 +119,13 @@
     },
     {
       "@type": "manifest:Link",
+      "manifest:iri": { "@id": "did:web:registry.gaia-x.eu:Scenario:kdHiux4L4it3ZsaBTMWWCX9v2sSuH3XCHPaN" },
+      "skos:note": { "@value": "Ensure that 'manifest_reference.json' contains all required categories: simulationData, documentation, metadata, media." },
+      "sh:conformsTo": [
+        { "@id": "https://ontologies.envited-x.net/envited-x/v2/ontology#" },
+        { "@id": "https://ontologies.envited-x.net/manifest/v5/ontology#" },
+        { "@id": "https://ontologies.envited-x.net/scenario/v4/ontology#" }
+      ],
       "manifest:hasAccessRole": {
         "@type": "manifest:AccessRole",
         "@id": "envited-x:isPublic"
@@ -173,6 +180,13 @@
   "manifest:hasReferencedArtifacts": [
     {
       "@type": "manifest:Link",
+      "manifest:iri": { "@id": "did:web:registry.gaia-x.eu:HdMap:wDgNY3gZAxMe3LjhdAZ9TbPiYnQ-yybNhCu8" },
+      "skos:note": { "@value": "Ensure that 'manifest_reference.json' contains all required categories: simulationData, documentation, metadata, media." },
+      "sh:conformsTo": [
+        { "@id": "https://ontologies.envited-x.net/envited-x/v2/ontology#" },
+        { "@id": "https://ontologies.envited-x.net/manifest/v5/ontology#" },
+        { "@id": "https://ontologies.envited-x.net/hdmap/v4/ontology#" }
+      ],
       "manifest:hasAccessRole": {
         "@type": "manifest:AccessRole",
         "@id": "envited-x:isPublic"
@@ -199,6 +213,13 @@
     },
     {
       "@type": "manifest:Link",
+      "manifest:iri": { "@id": "did:web:registry.gaia-x.eu:EnvironmentModel:6w462bGIheP4YgwebemsXr3yjIqvhi90EDIi" },
+      "skos:note": { "@value": "Ensure that 'manifest_reference.json' contains all required categories: simulationData, documentation, metadata, media." },
+      "sh:conformsTo": [
+        { "@id": "https://ontologies.envited-x.net/envited-x/v2/ontology#" },
+        { "@id": "https://ontologies.envited-x.net/manifest/v5/ontology#" },
+        { "@id": "https://ontologies.envited-x.net/environment-model/v4/ontology#" }
+      ],
       "manifest:hasAccessRole": {
         "@type": "manifest:AccessRole",
         "@id": "envited-x:isPublic"
